--- a/css/style.css
+++ b/css/style.css
@@ -1,95 +1,11 @@
-* {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-}
+@import url("./global/global.css");
+@import url("./utilidades/tipografia.css");
+@import url("./utilidades/cores.css");
 
-:root {
-    @media (prefers-color-scheme: dark) {}
-}
+@import url("./global/header.css");
 
-ul {
-    list-style: none;
-}
+/* Utilidades */
+@import url("./utilidades/componentes.css");
 
-a {
-    text-decoration: none;
-}
-
-.header-bg {
-    background: #000000;
-}
-
-.header {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-    max-width: 1200px;
-    margin: 0 auto;
-    gap: 20px;
-}
-
-.header-menu {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 40px;
-}
-
-.header-menu a {
-    display: inline-block;
-    color: white;
-    padding: 15px 0px;
-    border-radius: 4px;
-    transition: 0.3s;
-    font-size: 1rem;
-    position: relative;
-}
-
-.header-menu a:after {
-    content: "";
-    display: block;
-    height: 2px;
-    width: 0;
-    background: #4e4e4e;
-    margin-top: 4px;
-    transition: 0.3s;
-    position: absolute;
-}
-
-.header-menu a:hover:after {
-    width: 100%;
-    /* background: #2e2e2e; */
-}
-
-@media (max-width: 800px) {
-    * .header-menu {
-        gap: 20px
-    }
-
-    .header-menu a {
-        /* background: #111111; */
-        padding: 20px 20px;
-    }
-
-    .header-menu a:hover {
-        background: #2e2e2e;
-    }
-
-    .header a:after {
-        display: none;
-    }
-}
-
-@media (max-width: 600px) {
-    /* .header-menu {
-        gap: 20px
-    } 
-
-    .header-menu a {       
-        padding: 15px 10px;
-        border-radius: 4px;
-    }*/
-}
+/* Home */
+@import url("./home/introducao.css");
