--- a/css/global/header.css
+++ b/css/global/header.css
@@ -8,9 +8,6 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px;
-    max-width: 1200px;
-    margin: 0 auto;
-    gap: 20px;
 }
 
 .header-menu {
@@ -25,10 +22,10 @@
     border-radius: 4px;
     color: var(--cor-00);
     transition: 0.3s;
-    font-size: 1rem;
+    /* font-size: 1rem; */
     position: relative;
-    font-family: "Poppins";
-    font-weight: 400;
+    /* font-family: "Poppins";
+    font-weight: 400; */
 }
 
 .header-menu a:after {
