--- a/css/global/global.css
+++ b/css/global/global.css
@@ -6,14 +6,12 @@
     @media (prefers-color-scheme: dark) {} 
 }*/
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap');
-
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
     font-family: "Poppins", "Roboto", Arial, Helvetica, sans-serif;
-    color: #111;
+    /* color: #111; */
 }
 
 body {
