--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -15,12 +15,22 @@
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     text-transform: uppercase;
     font: 600 1.125rem/1.35 "Poppins", sans-serif;
+    max-width: max-content;
 }
 
 .button:hover {
     background: linear-gradient(180deg, #ffb60d 0%, #e59317 100%);
 }
 
+.button.secundario {
+    background: var(--cor-10);
+    color: var(--cor-02);
+}
+
+
+.button.secundario:hover {
+    background: var(--cor-09)
+}
 
 @media (max-width: 600px) {
     .button {
