--- a/css/global/global.css
+++ b/css/global/global.css
@@ -11,7 +11,7 @@
     padding: 0px;
     box-sizing: border-box;
     font-family: "Poppins", "Roboto", Arial, Helvetica, sans-serif;
-    /* color: #111; */
+    color: #111;
 }
 
 body {
