--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -27,9 +27,27 @@
     color: var(--cor-02);
 }
 
-
 .button.secundario:hover {
     background: var(--cor-09)
+}
+
+.button.seta {
+    display: flex;
+    align-items: center;
+}
+
+.button.seta::after {
+    content: "";
+    display: inline-block;
+    width: 18px;
+    height: 10px;
+    margin-left: 12px;
+    background: url("../../image/icones/seta.svg");
+    transition: transform 0.2s;
+}
+
+.button.seta:hover:after {
+    transform: translateX(4px);
 }
 
 @media (max-width: 600px) {
