--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@
 
 /* Bicicletas */
 @import "./bicicletas/bicicletas-lista.css";
+@import "./bicicletas/bicicletas.css";
+
+/* Bicicleta */
+@import "./bicicleta/bicicleta.css";
 
 /* Seguros */
 @import "./seguros/seguros.css";
@@ -26,6 +30,3 @@
 
 /* Termos */
 @import "./termos/termos.css";
-
-/* Bicicletas */
-@import "./bicicletas/bicicletas.css";
