--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 /* Utilidades */
 @import "./utilidades/componentes.css";
+@import "./utilidades/formulario.css";
 
 /* Home */
 @import "./home/introducao.css";
@@ -19,6 +20,7 @@
 
 /* Bicicleta */
 @import "./bicicleta/bicicleta.css";
+@import "./bicicleta/seguro.css";
 
 /* Seguros */
 @import "./seguros/seguros.css";
@@ -27,6 +29,13 @@
 
 /* Footer */
 @import "./global/footer.css";
+
+/* Contato */
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
+
+/* Orcamento */
+@import "./orcamento/orcamento.css";
 
 /* Termos */
 @import "./termos/termos.css";
